; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/cio/extr_device_pgid.c_spid_start.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/cio/extr_device_pgid.c_spid_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ccw_device = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.ccw_request }
%struct.ccw_request = type { i32, i32, i32, i32, i32 }

@PGID_TIMEOUT = common dso_local global i32 0, align 4
@PGID_RETRIES = common dso_local global i32 0, align 4
@spid_callback = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ccw_device*)* @spid_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @spid_start(%struct.ccw_device* %0) #0 {
  %2 = alloca %struct.ccw_device*, align 8
  %3 = alloca %struct.ccw_request*, align 8
  store %struct.ccw_device* %0, %struct.ccw_device** %2, align 8
  %4 = load %struct.ccw_device*, %struct.ccw_device** %2, align 8
  %5 = getelementptr inbounds %struct.ccw_device, %struct.ccw_device* %4, i32 0, i32 0
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  store %struct.ccw_request* %7, %struct.ccw_request** %3, align 8
  %8 = load %struct.ccw_request*, %struct.ccw_request** %3, align 8
  %9 = call i32 @memset(%struct.ccw_request* %8, i32 0, i32 20)
  %10 = load i32, i32* @PGID_TIMEOUT, align 4
  %11 = load %struct.ccw_request*, %struct.ccw_request** %3, align 8
  %12 = getelementptr inbounds %struct.ccw_request, %struct.ccw_request* %11, i32 0, i32 4
  store i32 %10, i32* %12, align 4
  %13 = load i32, i32* @PGID_RETRIES, align 4
  %14 = load %struct.ccw_request*, %struct.ccw_request** %3, align 8
  %15 = getelementptr inbounds %struct.ccw_request, %struct.ccw_request* %14, i32 0, i32 3
  store i32 %13, i32* %15, align 4
  %16 = load %struct.ccw_request*, %struct.ccw_request** %3, align 8
  %17 = getelementptr inbounds %struct.ccw_request, %struct.ccw_request* %16, i32 0, i32 0
  store i32 128, i32* %17, align 4
  %18 = load %struct.ccw_request*, %struct.ccw_request** %3, align 8
  %19 = getelementptr inbounds %struct.ccw_request, %struct.ccw_request* %18, i32 0, i32 1
  store i32 1, i32* %19, align 4
  %20 = load i32, i32* @spid_callback, align 4
  %21 = load %struct.ccw_request*, %struct.ccw_request** %3, align 8
  %22 = getelementptr inbounds %struct.ccw_request, %struct.ccw_request* %21, i32 0, i32 2
  store i32 %20, i32* %22, align 4
  %23 = load %struct.ccw_device*, %struct.ccw_device** %2, align 8
  %24 = call i32 @spid_do(%struct.ccw_device* %23)
  ret void
}

declare dso_local i32 @memset(%struct.ccw_request*, i32, i32) #1

declare dso_local i32 @spid_do(%struct.ccw_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
